# sql-engine

./: package.yaml  sql-engine.cabal  stack.yaml
src/: Algebra.hs  Evaluator.hs  Lib.hs  Schema.hs  Translation.hs  TranslatorM.hs
test/: EvaluatorSpec.hs  SchemaSpec.hs  TestHelper.hs  TranslationSpec.hs
